Issues are solved
